syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message UpdateDeedOfOwnershipDocumentRequest {
    int32 DeedOfOwnershipDocumentId = 1;
    repeated int64 RealEstateIds = 2;
}